[package]
name = "drill"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }

# Dependências futuras do engine devem voltar conforme os módulos forem
# implementados. Mantê-las ativas agora faz um app pequeno compilar dezenas de
# crates pesadas sem uso.
#
# memmap2 = "0.9"
# sha2 = "0.10"
# crc = "3"
# infer = "0.16"
# tree_magic_mini = "3"
# flate2 = "1"
# xz2 = { version = "0.1", features = ["static"] }
# bzip2 = "0.4"
# lz4_flex = "0.11"
# zstd = "0.13"
# brotli = "6"
# zip = "2"
# tar = "0.4"
# gpt = "3"
# mbrman = "0.3"
# goblin = "0.8"
# object = "0.36"
# capstone = "0.12"
# acpi = { version = "5", default-features = false }
# x509-parser = "0.16"
# ttf-parser = "0.21"
# image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp", "ico"] }
# symphonia = { version = "0.5", features = ["all"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# rayon = "1"
